# rt-vocaltract

./: .gitignore  Cargo.toml  pyproject.toml  setup.cfg
avatar-rs/examples/: ndarray.rs
avatar-rs/resources/: venture.npy
avatar-rs/resources/samples/: bay_loshift=-100ms_art.npy  bay_loshift=-60ms_art.npy  bay_loshift=-80ms_art.npy  bay_loshift=20ms_art.npy  lock_rock_alpha=0.0_art.npy  lock_rock_alpha=0.2_art.npy  lock_rock_alpha=0.4_art.npy
avatar-rs/src/: point.rs
notebooks/: data_libri_explore.ipynb  stream_art.ipynb
resources/: venture.mov
resources/samples/: bay_loshift=-20ms_art.npy  bay_loshift=-40ms_art.npy  bay_loshift=0ms_art.npy  bay_loshift=100ms_art.npy  bay_loshift=40ms_art.npy  bay_loshift=60ms_art.npy  bay_loshift=80ms_art.npy  lock_rock_alpha=-0.2_art.npy  lock_rock_alpha=0.6_art.npy  lock_rock_alpha=0.8_art.npy  lock_rock_alpha=1.0_art.npy
rt_vocaltract.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rt_vocaltract/datasets/: __init__.py  libritts_r.py
rt_vocaltract/losses/: __init__.py  adv.py
rt_vocaltract/models/: __init__.py  soundstream.py
rt_vocaltract/utils/: configs.py
src/: main.rs
